log
Sun 30 Apr 2023 07:15:58 PM UTC: 
 tests:  0|5
total_score: 0/70
97e1234
Sun 30 Apr 2023 07:53:11 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
60ccffe
Sun 30 Apr 2023 07:58:51 PM UTC: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:9: error: variable ‘indicador’ set but not used [-Werror=unused-but-set-variable]
   54 |     int indicador;
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cba46b6
Sun 30 Apr 2023 07:59:02 PM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|5
total_score: 0/70
1b3d4f0
Sun 30 Apr 2023 07:59:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b035b35
Sun 30 Apr 2023 07:59:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
79f51d5
Sun 30 Apr 2023 08:00:33 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5e86398
Sun 30 Apr 2023 08:01:49 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3d2a8ed
Sun 30 Apr 2023 08:02:20 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:17: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   58 |         *nAux = copy(n);
      |                 ^~~~
Compilation failed
70ec70a
Sun 30 Apr 2023 08:02:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c0fd362
Sun 30 Apr 2023 08:04:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8f384ad
Sun 30 Apr 2023 08:06:22 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e33cad8
Sun 30 Apr 2023 08:06:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f8f6a3e
Sun 30 Apr 2023 08:07:58 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c7dee25
Sun 30 Apr 2023 08:09:32 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
48711d1
Sun 30 Apr 2023 08:10:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d56e170
Sun 30 Apr 2023 08:12:24 PM UTC: 
 sudoku.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
d0e3232
Sun 30 Apr 2023 08:12:52 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 5/70
58a0822
Sun 30 Apr 2023 08:15:09 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
6e0f5fa
Sun 30 Apr 2023 08:15:19 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
589e4db
Sun 30 Apr 2023 08:19:44 PM UTC: 
 sudoku.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4e02e67
Sun 30 Apr 2023 08:42:17 PM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++----
 1 file changed, 25 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:21: error: unused variable ‘ocurrencias’ [-Werror=unused-variable]
   57 |                 int ocurrencias = 0;
      |                     ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7a8e455
Sun 30 Apr 2023 08:42:27 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
cfb8e79
Sun 30 Apr 2023 09:08:08 PM UTC: 
 sudoku.c | 38 ++++++++++++++++++++++++++++++--------
 1 file changed, 30 insertions(+), 8 deletions(-)
 tests:  5|3
total_score: 35/70
11ab236
Tue 02 May 2023 05:14:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
19bcf11
